--- a/h2o-r/h2o-package/pkgdown/_pkgdown.yml
+++ b/h2o-r/h2o-package/pkgdown/_pkgdown.yml
@@ -105,8 +105,11 @@ reference:
       - h2o.downloadCSV
       - h2o.entropy
       - h2o.exp
+      - h2o.explain
+      - h2o.explain_row
       - h2o.exportFile
       - h2o.exportHDFS
+      - h2o.feature_interaction
       - h2o.fillna
       - h2o.filterNACols
       - h2o.find_row_by_threshold
@@ -144,6 +147,7 @@ reference:
       - h2o.hist
       - h2o.hit_ratio_table
       - h2o.hour
+      - h2o.ice_plot
       - h2o.ifelse
       - h2o.import_hive_table
       - h2o.import_mojo
@@ -196,6 +200,7 @@ reference:
       - h2o.metric
       - h2o.min
       - h2o.mktime
+      - h2o.model_correlation_heatmap
       - h2o.mojo_predict_csv
       - h2o.mojo_predict_df
       - h2o.month
@@ -218,6 +223,8 @@ reference:
       - h2o.parseRaw
       - h2o.parseSetup
       - h2o.partialPlot
+      - h2o.pd_multi_plot
+      - h2o.pd_plot
       - h2o.performance
       - h2o.pivot
       - h2o.prcomp
@@ -240,6 +247,7 @@ reference:
       - h2o.removeVecs
       - h2o.rep_len
       - h2o.reset_threshold
+      - h2o.residual_analysis_plot
       - h2o.residual_deviance 
       - h2o.residual_dof
       - h2o.rm 
@@ -261,6 +269,8 @@ reference:
       - h2o.set_s3_credentials
       - h2o.setLevels
       - h2o.setTimezone
+      - h2o.shap_explain_row_plot
+      - h2o.shap_summary_plot
       - h2o.show_progress
       - h2o.shutdown
       - h2o.signif
@@ -289,6 +299,7 @@ reference:
       - h2o.target_encode_fit
       - h2o.target_encode_transform
       - h2o.targetencoder
+      - h2o.tf_idf
       - h2o.toFrame
       - h2o.tokenize
       - h2o.tolower
@@ -307,6 +318,7 @@ reference:
       - h2o.upload_model
       - h2o.upload_mojo
       - h2o.var 
+      - h2o.varimp_heatmap
       - h2o.varimp_plot
       - h2o.varimp 
       - h2o.varsplits
